--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -7,28 +7,29 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
     <title>{% block title %} CardQuest Master {% endblock %}</title>
   </head>
   <body>
-    <!--NAVBAR-->
+
+    <!-- navbar -->
     <section class="navbar">
-      <a href="home.html" class="btn" id="active"> Home </a>
-      <a href="trainer.html" class="btn"> Trainer </a>
-      <a href="pokemon-card.html" class="btn"> Pokemon Card </a>
-      <a href="collection.html" class="btn"> Collection </a>
+      <a href="{% url 'home' %}" class="btn" id="active"> Home </a>
+      <a href="{% url 'trainer-list' %}" class="btn"> Trainer </a>
+      <a href="{% url 'pokemoncard-list' %}" class="btn"> Pokemon Card </a>
+      <a href="{% url 'collection-list' %}" class="btn"> Collection </a>
     </section>
 
-    <!--CONTENT-->
+    <!-- Main content of your webpage -->
     <main>
-        {% block content %} 
+      {% block content %}
 
-        {% endblock %}
+      {% endblock%}
     </main>
 
     {% include 'includes/footer.html' %}
-
+    
   </body>
 </html>
